[gd_scene load_steps=4 format=3 uid="uid://ivi0k786xebg"]

[ext_resource type="Theme" uid="uid://be5eam43o2vgt" path="res://tema_principal.tres" id="1_d6qvh"]
[ext_resource type="Script" uid="uid://cbusebm14o65n" path="res://scripts/menus/partida_local_menu.gd" id="1_u7btq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rrkxu"]
bg_color = Color(0.94902, 0.929412, 0.854902, 1)

[node name="Window" type="Window"]
initial_position = 2
size = Vector2i(500, 300)
script = ExtResource("1_u7btq")

[node name="PartidaLocalMenu" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rrkxu")

[node name="MarginContainer" type="MarginContainer" parent="PartidaLocalMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PartidaLocalMenu/MarginContainer"]
layout_mode = 2

[node name="VSpace4" type="Control" parent="PartidaLocalMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PartidaLocalMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nome 1ยบ Jogador:"
horizontal_alignment = 1

[node name="NamePlayer" type="LineEdit" parent="PartidaLocalMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VSpace" type="Control" parent="PartidaLocalMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="PartidaLocalMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nome 2ยบ Jogador:"
horizontal_alignment = 1

[node name="NamePlayer2" type="LineEdit" parent="PartidaLocalMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VSpace2" type="Control" parent="PartidaLocalMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartGameLocal" type="Button" parent="PartidaLocalMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_d6qvh")
theme_type_variation = &"Button_Menus"
text = "Start Game"

[node name="VSpace3" type="Control" parent="PartidaLocalMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="PartidaLocalMenu/MarginContainer/VBoxContainer/NamePlayer" to="." method="_on_name_player_text_changed"]
[connection signal="text_changed" from="PartidaLocalMenu/MarginContainer/VBoxContainer/NamePlayer2" to="." method="_on_name_player_2_text_changed"]
[connection signal="pressed" from="PartidaLocalMenu/MarginContainer/VBoxContainer/StartGameLocal" to="." method="_on_start_game_local_pressed"]
